my-apps-disabled/ai/llama-cpp/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llama-cpp-route
  namespace: llama-cpp
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway-internal
    namespace: gateway
  hostnames:
  - "llama.tuxgrid.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    timeouts:
      request: 30m
      backendRequest: 30m
    backendRefs:
    - group: ""
      kind: Service
      name: llama-cpp-service
      port: 8080
      weight: 1
